# rogerthat

./: .gitignore  Cargo.toml  README.md
src/: algorithms.rs  lib.rs  main.rs  modes.rs
src/algorithms/: cached.rs  interactive.rs  mask_buckets.rs  memoized.rs  naive.rs
src/modes/: interactive.rs  run_all.rs
