[package]
name = "rogerthat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ascii = "1.1.0"
clap = { version = "4.1.13", features = ["derive"] }
itertools = "0.10.5"
ndarray = "0.15.6"
once_cell = "1.17.1"

[profile.release]
codegen-units = 1
panic = "abort"
# debug = true
